@@ -19,41 +19,26 @@ package org.jkiss.dbeaver.model.sql.semantics.context;
 import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.Log;
+import org.jkiss.dbeaver.model.DBPDataSource;
 import org.jkiss.dbeaver.model.sql.SQLDialect;
-import org.jkiss.dbeaver.model.sql.semantics.SQLQueryQualifiedName;
-import org.jkiss.dbeaver.model.sql.semantics.SQLQuerySymbol;
-import org.jkiss.dbeaver.model.sql.semantics.SQLQuerySymbolEntry;
+import org.jkiss.dbeaver.model.sql.SQLUtils;
+import org.jkiss.dbeaver.model.sql.semantics.*;
+import org.jkiss.dbeaver.model.sql.semantics.model.SQLQueryMemberAccessEntry;
 import org.jkiss.dbeaver.model.sql.semantics.model.select.SQLQueryRowsSourceModel;
 import org.jkiss.dbeaver.model.stm.STMUtils;
 import org.jkiss.dbeaver.model.struct.DBSEntity;
 import org.jkiss.dbeaver.model.struct.DBSObject;
+import org.jkiss.dbeaver.utils.ListNode;
 import org.jkiss.utils.Pair;
 
 import java.util.*;
+import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class SQLQueryRowsSourceContext {
 
     private static final Log log = Log.getLog(SQLQueryRowsSourceContext.class);
-
-    /**
-     * Describes the result of the query source resolution for the specified identifier name
-     */
-    public static class KnownRowsSourceInfo extends SourceResolutionResult {
-
-        @Nullable
-        public final SQLQueryComplexName referenceName;
-
-        protected KnownRowsSourceInfo(
-            @NotNull SQLQueryRowsSourceModel source,
-            @Nullable SQLQueryComplexName referenceName,
-            @Nullable DBSEntity tableOrNull,
-            @Nullable SQLQuerySymbol aliasOrNull
-        ) {
-            super(source, tableOrNull, aliasOrNull);
-            this.referenceName = referenceName;
-        }
-    }
 
     @NotNull
     private final SQLQueryConnectionContext connectionInfo;
@@ -61,28 +46,53 @@ public class SQLQueryRowsSourceContext {
     private final boolean hasUnresolvedSource;
 
     @NotNull
-    private final Map<SQLQueryComplexName, KnownRowsSourceInfo> rowsSources;
+    private final Map<SQLQueryComplexName, SourceResolutionResult> rowsSources;
 
     @NotNull
-    private final Map<SQLQueryComplexName, KnownRowsSourceInfo> dynamicTableSources;
+    private final Map<String, SourceResolutionResult> dynamicTableSources;
+
+    @NotNull
+    private final Map<String, SourceResolutionResult> sourcesByLoweredAlias;
+
+    @Nullable
+    private ListNode<SQLQueryRowsSourceContext> targetRowContexts = null;
+
+    @Nullable
+    private ListNode<SQLQueryRowsDataContext> targetDataContexts = null;
 
     public SQLQueryRowsSourceContext(@NotNull SQLQueryConnectionContext connectionInfo) {
+        this(connectionInfo, false);
+    }
+
+    private SQLQueryRowsSourceContext(@NotNull SQLQueryConnectionContext connectionInfo, boolean hasUnresolvedSource) {
         this.connectionInfo = connectionInfo;
-        this.hasUnresolvedSource = false;
+        this.hasUnresolvedSource = hasUnresolvedSource;
         this.rowsSources = Collections.emptyMap();
         this.dynamicTableSources = Collections.emptyMap();
+        this.sourcesByLoweredAlias = Collections.emptyMap();
     }
 
     private SQLQueryRowsSourceContext(
-        @NotNull SQLQueryConnectionContext connectionInfo,
+        @NotNull SQLQueryRowsSourceContext parent,
         boolean hasUnresolvedSource,
-        @NotNull Map<SQLQueryComplexName, KnownRowsSourceInfo> rowsSources,
-        @NotNull Map<SQLQueryComplexName, KnownRowsSourceInfo> dynamicTableSources
+        @NotNull Map<SQLQueryComplexName, SourceResolutionResult> rowsSources,
+        @NotNull Map<String, SourceResolutionResult> dynamicTableSources,
+        @NotNull Map<String, SourceResolutionResult> sourcesByLoweredAlias
     ) {
-        this.connectionInfo = connectionInfo;
+        parent.registerConsumingContext(this);
+        this.connectionInfo = parent.connectionInfo;
         this.hasUnresolvedSource = hasUnresolvedSource;
         this.rowsSources = rowsSources;
         this.dynamicTableSources = dynamicTableSources;
+        this.sourcesByLoweredAlias = sourcesByLoweredAlias;
+    }
+
+    private void registerConsumingContext(@NotNull SQLQueryRowsSourceContext context) {
+        this.targetRowContexts = ListNode.push(this.targetRowContexts, context);
+    }
+
+    void registerConsumingContext(@NotNull SQLQueryRowsDataContext context) {
+        this.targetDataContexts = ListNode.push(this.targetDataContexts, context);
     }
 
     @NotNull
@@ -100,7 +110,15 @@ public class SQLQueryRowsSourceContext {
      */
     @NotNull
     public final SQLQueryRowsSourceContext reset() {
-        return new SQLQueryRowsSourceContext(this.connectionInfo);
+        return new SQLQueryRowsSourceContext(this.connectionInfo, false);
+    }
+
+    /**
+     * Prepare new semantic context by hiding all the involved rows sources such as subqueries and table references and marking this context as having unresolved rowset references
+     */
+    @NotNull
+    public final SQLQueryRowsSourceContext resetAsUnresolved() {
+        return new SQLQueryRowsSourceContext(this.connectionInfo, true);
     }
 
     /**
@@ -114,8 +132,8 @@ public class SQLQueryRowsSourceContext {
      * Find semantic model item responsible for the representation of the dynamic table data like CTE being treated as an extra table
      */
     @Nullable
-    public KnownRowsSourceInfo findDynamicRowsSource(@NotNull SQLQueryComplexName name) {
-        return this.dynamicTableSources.get(name);
+    public SourceResolutionResult findDynamicRowsSource(@NotNull SQLQuerySymbolEntry name) {
+        return this.dynamicTableSources.get(name.getName().toLowerCase());
     }
 
     /**
@@ -125,12 +143,29 @@ public class SQLQueryRowsSourceContext {
      * @implNote TODO consider ambiguous table names
      */
     @Nullable
-    public KnownRowsSourceInfo findReferencedSource(@NotNull SQLQueryComplexName name) {
+    public SourceResolutionInfo findReferencedSource(@NotNull SQLQueryComplexName name) {
+        if (!name.parts.isEmpty()) {
+            SQLQuerySymbolEntry entry = name.parts.getFirst();
+            SourceResolutionResult result = this.findSourceByAlias(entry.getName());
+            if (result != null) {
+                SQLQueryMemberAccessEntry endingPeriod;
+                if (name.parts.size() > 1 && name.parts.get(1) != null) {
+                    endingPeriod = name.parts.get(1).getMemberAccess();
+                } else if (name.parts.size() == 2 && name.parts.get(1) == null) {
+                    endingPeriod = name.endingPeriodNode;
+                } else {
+                    endingPeriod = null;
+                }
+                SQLQueryComplexName key = new SQLQueryComplexName(entry.getSyntaxNode(), List.of(entry), 0, endingPeriod);
+                return new SourceResolutionInfo(result, key);
+            }
+        }
+
         SQLQueryComplexName namePart = name;
         while (namePart != null) {
-            KnownRowsSourceInfo entry = this.rowsSources.get(namePart);
-            if (entry != null) {
-                return entry;
+            SourceResolutionResult result = this.rowsSources.get(namePart);
+            if (result != null) {
+                return new SourceResolutionInfo(result, namePart);
             } else {
                 namePart = namePart.trimEnd();
             }
@@ -138,12 +173,29 @@ public class SQLQueryRowsSourceContext {
         return null;
     }
 
+    public record SourceResolutionInfo(
+        @NotNull SourceResolutionResult target,
+        @NotNull SQLQueryComplexName key
+    ) {
+    }
+
     /**
      * Get the resolved query source by its name
      */
     @Nullable
-    public KnownRowsSourceInfo findReferencedSourceExact(@NotNull SQLQueryComplexName name) {
+    public SourceResolutionResult findReferencedSourceExact(@NotNull SQLQueryComplexName name) {
+        if (name.stringParts.size() == 1 && name.invalidPartsCount == 0) {
+            SourceResolutionResult result = this.findSourceByAlias(name.stringParts.getFirst());
+            if (result != null) {
+                return result;
+            }
+        }
         return this.rowsSources.get(name);
+    }
+
+    @Nullable
+    private SourceResolutionResult findSourceByAlias(@NotNull String aliasName) {
+        return this.sourcesByLoweredAlias.get(aliasName.toLowerCase());
     }
 
     /**
@@ -156,7 +208,12 @@ public class SQLQueryRowsSourceContext {
                 putAll(other.rowsSources);
                 putAll(SQLQueryRowsSourceContext.this.rowsSources);
             }
-        });
+        }, new HashMap<>() {
+            {
+                putAll(other.sourcesByLoweredAlias);
+                putAll(SQLQueryRowsSourceContext.this.sourcesByLoweredAlias);
+            }
+        }, this.hasUnresolvedSource || other.hasUnresolvedSource);
     }
 
     /**
@@ -165,37 +222,48 @@ public class SQLQueryRowsSourceContext {
     @NotNull
     public final SQLQueryRowsSourceContext appendSource(
         @NotNull SQLQueryRowsSourceModel source,
-        @NotNull SQLQueryComplexName name,
+        @NotNull SQLQueryComplexName classifiedName,
         @Nullable DBSEntity tableOrNull
     ) {
-        return this.setRowsSources(new HashMap<>() {
-            {
-                putAll(SQLQueryRowsSourceContext.this.rowsSources);
-                put(name, new KnownRowsSourceInfo(source, name, tableOrNull, null));
+        SourceResolutionResult srr = new SourceResolutionResult(source, classifiedName, tableOrNull, null);
+
+        Map<SQLQueryComplexName, SourceResolutionResult> rowsSources = new HashMap<>(this.rowsSources);
+        rowsSources.put(classifiedName, srr);
+
+        if (tableOrNull != null && classifiedName.parts.getFirst().getDefinition() instanceof SQLQuerySymbolByDbObjectDefinition subparent) {
+            for (SQLQueryComplexName nameFragment = classifiedName.trimStart(); nameFragment != null; nameFragment = nameFragment.trimStart()) {
+                rowsSources.put(nameFragment, srr);
             }
-        });
+            SQLQueryComplexName synthesizedName = classifiedName;
+            for (DBSObject o = subparent.getDbObject().getParentObject(); o != null && !(o instanceof DBPDataSource); o = o.getParentObject()) {
+                String canonicalName = SQLUtils.identifierToCanonicalForm(this.connectionInfo.dialect, o.getName(), false, true);
+                SQLQuerySymbolEntry entry = new SQLQuerySymbolEntry(classifiedName.syntaxNode, canonicalName, o.getName(), null);
+                entry.setDefinition(new SQLQuerySymbolByDbObjectDefinition(o, SQLQuerySemanticUtils.inferSymbolClass(o)));
+                synthesizedName = synthesizedName.prepend(entry);
+                rowsSources.put(synthesizedName, srr);
+            }
+        }
+        return this.setRowsSources(rowsSources, this.sourcesByLoweredAlias, this.hasUnresolvedSource);
     }
 
     /**
      * Associate alias with the resolved query source
      */
     @NotNull
-    public final SQLQueryRowsSourceContext appendAlias(@NotNull SQLQueryRowsSourceModel source, @NotNull SQLQuerySymbol alias) {
-        return this.setRowsSources(new HashMap<>() {
-            {
-                putAll(SQLQueryRowsSourceContext.this.rowsSources);
+    public final SQLQueryRowsSourceContext replaceWithAlias(@NotNull SQLQueryRowsSourceModel oldSource, @NotNull SQLQueryRowsSourceModel newSource, @NotNull SQLQuerySymbolEntry alias) {
+        SourceResolutionResult oldEntry = this.rowsSources.values().stream().filter(s -> s.source == oldSource).findFirst().orElse(null);
+        DBSEntity oldEntryTable = oldEntry == null ? null : oldEntry.tableOrNull;
+        SourceResolutionResult newEntry = new SourceResolutionResult(newSource, null, oldEntryTable, alias.getSymbol());
 
-                KnownRowsSourceInfo entry = this.values().stream().filter(s -> s.source == source).findFirst().orElse(null);
-                KnownRowsSourceInfo newEntry;
-                if (entry != null) {
-                    newEntry = new KnownRowsSourceInfo(entry.source, entry.referenceName, entry.tableOrNull, alias);
-                    put(entry.referenceName, newEntry);
-                } else {
-                    newEntry = new KnownRowsSourceInfo(source, null, null, alias);
-                }
-                put(new SQLQueryComplexName(alias.getName()), newEntry);
-            }
-        });
+        return this.setRowsSources(
+            this.rowsSources.entrySet().stream()
+                .filter(e -> e.getValue().source == oldSource)
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)),
+            new HashMap<>() {{
+                putAll(SQLQueryRowsSourceContext.this.sourcesByLoweredAlias);
+                put(alias.getName().toLowerCase(), newEntry);
+            }}, this.hasUnresolvedSource
+        );
     }
 
     /**
@@ -205,17 +273,22 @@ public class SQLQueryRowsSourceContext {
     public final SQLQueryRowsSourceContext appendCteSources(@NotNull List<Pair<SQLQuerySymbolEntry, SQLQueryRowsSourceModel>> sources) {
         return this.setDynamicRowsSources(new HashMap<>() {
             {
-                putAll(SQLQueryRowsSourceContext.this.rowsSources);
+                putAll(SQLQueryRowsSourceContext.this.dynamicTableSources);
                 for (Pair<SQLQuerySymbolEntry, ? extends SQLQueryRowsSourceModel> entry : sources) {
                     SQLQuerySymbolEntry alias = entry.getFirst();
-                    SQLQueryRowsSourceModel sourceModel = entry.getSecond();
-                    SQLQueryComplexName name = new SQLQueryComplexName(new SQLQueryQualifiedName(
-                        alias.getSyntaxNode(), Collections.emptyList(), alias, 0, null
-                    ));
-                    put(name, new KnownRowsSourceInfo(sourceModel, name, null, null));
+                    if (alias != null) {
+                        SQLQueryRowsSourceModel sourceModel = entry.getSecond();
+                        SQLQueryComplexName name = new SQLQueryComplexName(alias.getSyntaxNode(), List.of(alias), 0, null);
+                        put(alias.getName().toLowerCase(), new SourceResolutionResult(sourceModel, name, null, alias.getSymbol()));
+                    }
                 }
             }
         });
+    }
+
+    @NotNull
+    public final SQLQueryRowsSourceContext setCteSourcesFrom(@NotNull SQLQueryRowsSourceContext context) {
+        return this.setDynamicRowsSources(Map.copyOf(context.dynamicTableSources));
     }
 
     ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -223,6 +296,7 @@ public class SQLQueryRowsSourceContext {
     /**
      * Create empty data context
      */
+    @NotNull
     public SQLQueryRowsDataContext makeEmptyTuple() {
         return new SQLQueryRowsDataContext(
             this,
@@ -234,6 +308,7 @@ public class SQLQueryRowsSourceContext {
     /**
      * Create row tuple model acting as a context for column references resolution
      */
+    @NotNull
     public SQLQueryRowsDataContext makeTuple(
         @NotNull List<SQLQueryResultColumn> columns,
         @NotNull List<SQLQueryResultPseudoColumn> pseudoColumns
@@ -244,6 +319,7 @@ public class SQLQueryRowsSourceContext {
     /**
      * Create row tuple model acting as a context for column references resolution
      */
+    @NotNull
     public final SQLQueryRowsDataContext makeTuple(
         @Nullable SQLQueryRowsSourceModel source,
         @NotNull List<SQLQueryResultColumn> columns,
@@ -252,27 +328,76 @@ public class SQLQueryRowsSourceContext {
         // TODO: review pseudoattributes behavior in DDL expressions (not handling for now)
         List<SQLQueryResultPseudoColumn> allPseudoColumns = source == null
             ? pseudoColumns
-            : STMUtils.combineLists(this.connectionInfo.rowsetPseudoColumnsProvider.apply(source), pseudoColumns);
+            : STMUtils.combineLists(this.connectionInfo.obtainRowsetPseudoColumns(source), pseudoColumns);
         return new SQLQueryRowsDataContext(this, columns, allPseudoColumns);
+    }
+
+    /**
+     * Create row tuple model acting as a context for column references resolution
+     */
+    @NotNull
+    public final SQLQueryRowsDataContext makeTuple(
+        @Nullable SQLQueryRowsSourceModel source,
+        @NotNull Pair<List<SQLQueryResultColumn>, List<SQLQueryResultPseudoColumn>> columnsAndPseudoColumns
+    ) {
+        return this.makeTuple(source, columnsAndPseudoColumns.getFirst(), columnsAndPseudoColumns.getSecond());
+    }
+
+    /**
+     * Create row tuple model acting as a context for column references resolution
+     */
+    @NotNull
+    public SQLQueryRowsDataContext makeJoinTuple(
+        @NotNull List<SQLQueryResultColumn> columns,
+        @NotNull List<SQLQueryResultPseudoColumn> pseudoColumns,
+        @NotNull SQLQueryRowsDataContext.JoinInfo joinInfo
+    ) {
+        return new SQLQueryRowsDataContext(this, columns, pseudoColumns, joinInfo);
     }
 
     /**
      * Returns information about resolved sources with ability to separately provide tables and aliases used in the query
      */
     @NotNull
-    public SQLQuerySourcesInfoCollection getKnownSources() {
+    public SQLQuerySourcesInfoCollection getKnownSources(boolean forQuerySubscope) {
+        ListNode<SQLQueryRowsSourceContext> queue = ListNode.of(this);
+        Set<SQLQueryRowsSourceContext> queued = new HashSet<>();
+        queued.add(this);
+
+        Set<SourceResolutionResult>  allSourceResolutions = new HashSet<>();
+
+        while (queue != null) {
+            SQLQueryRowsSourceContext source = queue.data;
+            queue = queue.next;
+
+            allSourceResolutions.addAll(source.rowsSources.values());
+            allSourceResolutions.addAll(source.sourcesByLoweredAlias.values());
+            allSourceResolutions.addAll(source.dynamicTableSources.values());
+
+            if (forQuerySubscope) {
+                for (ListNode<SQLQueryRowsSourceContext> item = source.targetRowContexts; item != null; item = item.next) {
+                    if (queued.add(item.data)) {
+                        queue = ListNode.push(queue, item.data);
+                    }
+                }
+            }
+        }
+
         return new SQLQuerySourcesInfoCollection() {
-
+            // combine inferred sources (from the underlying query expression) and dynamically provided (from the enclosing CTE)
             private final Map<SQLQueryRowsSourceModel, SourceResolutionResult> resolutionResults =
-                new HashSet<>(rowsSources.values()).stream().collect(Collectors.toMap(s -> s.source, s -> s));
+                allSourceResolutions.stream().collect(Collectors.toMap(s -> s.source, Function.identity()));
 
-            private final Set<DBSObject> referencedTables = rowsSources.values().stream().map(s -> s.tableOrNull)
+            private final Set<DBSObject> referencedTables = allSourceResolutions.stream()
+                .map(s -> s.tableOrNull)
                 .filter(Objects::nonNull)
                 .collect(Collectors.toSet());
 
-            private final Set<String> aliasesInUse = rowsSources.values().stream().map(s -> s.aliasOrNull)
+            private final Set<String> aliasesInUse = allSourceResolutions.stream()
+                .map(s -> s.aliasOrNull)
                 .filter(Objects::nonNull)
                 .map(SQLQuerySymbol::getName)
+                .map(String::toLowerCase)
                 .collect(Collectors.toSet());
 
             @NotNull
@@ -296,13 +421,29 @@ public class SQLQueryRowsSourceContext {
     }
 
     @NotNull
-    private SQLQueryRowsSourceContext setRowsSources(@NotNull Map<SQLQueryComplexName, KnownRowsSourceInfo> rowsSources) {
-        return new SQLQueryRowsSourceContext(this.connectionInfo, this.hasUnresolvedSource, rowsSources, this.dynamicTableSources);
+    private SQLQueryRowsSourceContext setRowsSources(
+        @NotNull Map<SQLQueryComplexName, SourceResolutionResult> rowsSources,
+        @NotNull Map<String, SourceResolutionResult> sourcesByLoweredAlias,
+        boolean hasUnresolvedSource
+    ) {
+        return new SQLQueryRowsSourceContext(
+            this,
+            hasUnresolvedSource,
+            rowsSources,
+            this.dynamicTableSources,
+            sourcesByLoweredAlias
+        );
     }
 
     @NotNull
-    private SQLQueryRowsSourceContext setDynamicRowsSources(@NotNull Map<SQLQueryComplexName, KnownRowsSourceInfo> dynamicTableSources) {
-        return new SQLQueryRowsSourceContext(this.connectionInfo, this.hasUnresolvedSource, this.rowsSources, dynamicTableSources);
+    private SQLQueryRowsSourceContext setDynamicRowsSources(@NotNull Map<String, SourceResolutionResult> dynamicTableSources) {
+        return new SQLQueryRowsSourceContext(
+            this,
+            this.hasUnresolvedSource,
+            this.rowsSources,
+            dynamicTableSources,
+            this.sourcesByLoweredAlias
+        );
     }
 
 }
