@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2024 DBeaver Corp and others
+ * Copyright (C) 2010-2025 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,11 +23,15 @@ import org.eclipse.swt.layout.FillLayout;
 import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.widgets.*;
 import org.jkiss.code.NotNull;
+import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.DBException;
 import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.model.DBPDataSourceContainer;
+import org.jkiss.dbeaver.model.DBPEvent;
+import org.jkiss.dbeaver.model.DBPEventListener;
 import org.jkiss.dbeaver.model.access.DBAAuthModel;
 import org.jkiss.dbeaver.model.connection.DBPAuthModelDescriptor;
+import org.jkiss.dbeaver.model.connection.DBPConnectionConfiguration;
 import org.jkiss.dbeaver.registry.DataSourceDescriptor;
 import org.jkiss.dbeaver.registry.DataSourceProviderRegistry;
 import org.jkiss.dbeaver.registry.configurator.DBPConnectionEditIntention;
@@ -48,7 +52,7 @@ import java.util.List;
  * ConnectionPageWithAuth
  */
 
-public class AuthModelSelector extends Composite {
+public class AuthModelSelector extends Composite implements DBPEventListener {
 
     private static final Log log = Log.getLog(DataSourceProviderRegistry.class);
 
@@ -65,7 +69,7 @@ public class AuthModelSelector extends Composite {
     private final Runnable changeListener;
     private Combo authModelCombo;
     private boolean authSettingsEnabled = true;
-    private boolean isEnableSharedConfigurator = true;
+    private final boolean isEnableSharedConfigurator;
     private final DBPConnectionEditIntention intention;
 
     public AuthModelSelector(
@@ -100,6 +104,12 @@ public class AuthModelSelector extends Composite {
                 log.error("Error creating shared configurator", e);
             }
         }
+
+        addDisposeListener(e -> {
+            if (activeDataSource != null) {
+                activeDataSource.getRegistry().removeDataSourceListener(this);
+            }
+        });
     }
 
     public DBPAuthModelDescriptor getSelectedAuthModel() {
@@ -127,11 +137,16 @@ public class AuthModelSelector extends Composite {
     }
 
     public void loadSettings(
-        DBPDataSourceContainer dataSourceContainer,
-        DBPAuthModelDescriptor activeAuthModel,
-        String defaultAuthModelId
+        @NotNull DBPDataSourceContainer dataSourceContainer,
+        @Nullable DBPAuthModelDescriptor activeAuthModel,
+        @Nullable String defaultAuthModelId
     ) {
+        if (this.activeDataSource != null) {
+            this.activeDataSource.getRegistry().removeDataSourceListener(this);
+        }
         this.activeDataSource = dataSourceContainer;
+        this.activeDataSource.getRegistry().addDataSourceListener(this);
+
         this.selectedAuthModel = activeAuthModel;
         this.authSettingsEnabled = !dataSourceContainer.isSharedCredentials();
         this.allAuthModels = activeDataSource.getDriver() == DriverDescriptor.NULL_DRIVER ?
@@ -153,7 +168,7 @@ public class AuthModelSelector extends Composite {
             }
             if (selectedAuthModel == null || !allAuthModels.contains(selectedAuthModel)) {
                 // First one
-                selectedAuthModel = allAuthModels.get(0);
+                selectedAuthModel = allAuthModels.getFirst();
                 dataSourceContainer.getConnectionConfiguration().setAuthModelId(selectedAuthModel.getId());
             }
         }
@@ -163,6 +178,26 @@ public class AuthModelSelector extends Composite {
 
         changeAuthModel();
     }
+
+    @Override
+    public void handleDataSourceEvent(@NotNull DBPEvent event) {
+        if (event.getAction() == DBPEvent.Action.OBJECT_UPDATE &&
+            event.getData() instanceof DBPConnectionConfiguration newConfig &&
+            event.getObject() == activeDataSource
+        ) {
+            UIUtils.asyncExec(() -> {
+                DBPConnectionConfiguration currentConfig = activeDataSource.getConnectionConfiguration();
+                currentConfig.setUserName(newConfig.getUserName());
+                currentConfig.setUserPassword(newConfig.getUserPassword());
+                currentConfig.setUrl(newConfig.getUrl());
+
+                if (authModelConfigurator != null && !isDisposed()) {
+                    authModelConfigurator.loadSettings(activeDataSource);
+                }
+            });
+        }
+    }
+
 
     private void changeAuthModel() {
         showAuthModelSettings();
@@ -315,7 +350,4 @@ public class AuthModelSelector extends Composite {
         }
     }
 
-    public void setEnableSharedConfigurator(boolean isEnable) {
-        this.isEnableSharedConfigurator = isEnable;
-    }
 }
